[build-system]
requires = ["setuptools>=82.0.1", "wheel>=0.46.3"]
build-backend = "setuptools.build_meta"

[project]
name = "checkmarx-dscan"
version = "0.1.0"
description = "Modular Checkmarx One upload scan orchestration with CrewAI integration."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "coverage>=7.10.6",
]

[project.optional-dependencies]
crewai = [
    "crewai>=1.11.1",
    "pydantic>=2.12.5",
]
mcp = [
    "mcp>=1.26.0",
]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
checkmarx-dscan = "checkmarx_dscan.interfaces.cli.scan:main"
checkmarx-jenkins-artifact = "checkmarx_dscan.interfaces.cli.jenkins:main"
checkmarx-project-scan = "checkmarx_dscan.interfaces.cli.project_scan:main"
checkmarx-mcp-server = "checkmarx_dscan.interfaces.agents.mcp:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]